# Inazuma-Eleven-GL

./: .gitignore  CMakeLists.txt  Makefile  PROJECT_DOCUMENTATION.md  README.md
include/: audio.hpp  ball.hpp  constants.hpp  field.hpp  game_logic.hpp  goalkeeper.hpp  hud.hpp  input.hpp  match.hpp  particle.hpp  player.hpp  stadium.hpp  utils.hpp
include/glad/: glad.h
src/: audio.cpp  ball.cpp  field.cpp  game.cpp  game_logic.cpp  glad.c  goalkeeper.cpp  hud.cpp  input.cpp  main.cpp  match.cpp  particle.cpp  player.cpp  stadium.cpp  stb_image_impl.cpp  utils.cpp
